# yolo_weapons

./: .gitattributes  .gitignore  DETECTION_ONLY_PIPELINE.md  PIPELINE_DOCUMENTATION.md  README.md  check_models.sh  download_datasets.sh  embeddings.npz  pyproject.toml  to_keep.txt  to_remove_crowd.txt
captum/: extract_crops.sh  extract_person_crops.py  grad_cam.py  grad_cam.sh  noise_tunneling.py  noise_tunneling.sh  run_occlusion.sh  run_pipeline.sh  weapon_occlusion.py
classification/: create_cropped_cls.py  image_classifier.py  slice.py  timestamps.txt  tmp_segment.makefile
confident_learning/: README.md  drop_img.ipynb  prepare_data.ipynb  prepare_matrix.ipynb  remove_tiny_crops.py  train_convnext_cv_folds.py  train_cv_folds.py  train_cv_parallel.sh
docs/: PERSON_WEAPON.md  problematic.md  temporal_filtering_experiments.md
evals/: eval_compare_pt_engine.py  eval_dangerous_test.py  eval_engine_only.py  eval_full_test.py  eval_rfdetr_test.py  evaluate_best_model.sh  evaluate_convnext.py
export/: deyo_export.py  export_compile.sh  export_convnext.sh  export_tensorrt.py  export_torch_compile.py  export_yolo.py  export_yolo.sh  requirements-export.txt
inference/: README_PERSON_WEAPON_DETECTION.md  person_weapon_simple.py  run_all_videos.sh  run_simple.sh  run_tiled_classification.sh  run_webcam.sh  tiled_classification_realtime.py  tiled_run.sh  tiled_tensorrt_realtime.py  weapon_detector_subprocess.py  webcam_inference.py
model_interp/: check_classes.py  deyo_crops.py  deyo_crops.sh  grad_cam.py  grad_cam.sh  guided_gradcam.py  guided_gradcam.sh  (+2 more)
(+775 files in other folders)
